# CoRSkinning

./: .gitignore  CMakeLists.txt  README.md  main.cpp
cor_output/: output_file.cors  output_file.txt
include/: CoRProcessor.h  FBXLoader.h
include/cor/: CoRCalculator.h  Mesh.h  ShaderUtils.h  WeightsPerBone.h
include/render/: AnimController.h  Camera.h  Mesh.h  Render.h  Shader.h  Window.h
shaders/: cor_compute.glsl  fragment.glsl  skeletons.glsl  skin.frag  skin.vert
src/: CoRProcessor.cpp  DisplayCommon.cpp  FBXLoader.cpp
src/cor/: CoRCalculator.cpp  Mesh.cpp  ShaderUtils.cpp  WeightsPerBone.cpp
src/render/: AnimController.cpp  Camera.cpp  Mesh.cpp  Render.cpp  Shader.cpp  Window.cpp
